--- a/21 - Flexbox vs CSS Grid/perfectly-centered-START.html
+++ b/21 - Flexbox vs CSS Grid/perfectly-centered-START.html
@@ -20,7 +20,19 @@
     .hero {
       height: 200px;
       background: rgba(255, 255, 255, 0.2);
+      display: grid;
+      justify-items: center;
+      align-content: center;
     }
+
+    /* .hero {
+      height: 200px;
+      background: rgba(255, 255, 255, 0.2);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    } */
   </style>
 </body>
 
