--- a/21 - Flexbox vs CSS Grid/unknown-content-size-START.html
+++ b/21 - Flexbox vs CSS Grid/unknown-content-size-START.html
@@ -24,6 +24,11 @@
   <style>
     .known {
       margin: 100px 0;
+      display: grid;
+      grid-template-columns: repeat(5, auto);
+      justify-content: center;
+      gap: 20px;
+
     }
   </style>
 
